# autodiff

./: README.md  generate_layer_graph.py  main.py  pyproject.toml
beacongrad/: __init__.py  nn.py  ops.py  optim.py  tensor.py  viz.py
examples/: 01_basic_tensor.py  02_neural_network.py  03_classification.py  04_custom_model.py  05_mlp.py  06_visualize_graph.py  07_decision_boundary.py  08_gradcheck.py  10_parity_plot.py  compare_with_pytorch.py
src/: neuron.py  nn.py  ops.py  optim.py  tensor.py  train.py  viz.py
