[project]
name = "beacongrad"
version = "0.1.0"
description = "A tiny, fun tensor-first NumPy autograd engine (broadcasting-aware)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "graphviz>=0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beacongrad"]
